CIT-120 : sticky bottom add to cart fixed on mobile

--- a/src/components/Product/ProductDetailsSection/style.module.css
+++ b/src/components/Product/ProductDetailsSection/style.module.css
@@ -202,14 +202,16 @@
 }
 
 .sticky_bar_wrapper {
-  @apply hidden items-center rounded-t-2xl mx-auto py-3 px-4 lg:flex gap-3 md:gap-8 xl:gap-14 min-h-[80px] z-[999] bg-fff fixed bottom-0 left-[50%];
+  @apply flex items-center rounded-t-2xl mx-auto py-4 lg:py-3 px-4 gap-4 md:gap-8 xl:gap-14 min-h-[80px] z-[999] bg-fff fixed bottom-0 left-[50%];
   box-shadow: 0px -2px 20px 0px rgba(0, 0, 0, 0.25);
   transform: translateX(-50%);
 }
 .sticky_bar_head {
-  @apply w-[278px] text-16 xl:text-20 text-45454A font-medium tracking-0.4;
+  @apply hidden lg:flex w-[278px] text-16 xl:text-20 text-45454A font-medium tracking-0.4;
 }
-
+.sticky_add_cart_btn {
+  @apply cursor-pointer mt-12 bg-btn-primary flex justify-center items-center w-[133px] lg:w-full h-12 xl:h-14 rounded-lg text-16 text-222 font-medium;
+}
 .skeleton_wrapper {
   @apply flex w-full px-0 md:px-[70px] xl:px-[90px] macbook:px-[122px] 3xl:px-[160px];
 }
